# Django-DRF-CompanyApp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml
company/: admin.py  apps.py  attr_handler.py  date_modifier.py  exceptions.py  filtersets.py  history_log_creator.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py  viewsets.py
company/fixtures/: user.json
company/management/commands/: update_statuses.py
company/migrations/: 0001_initial.py  0002_alter_project_description.py  0003_alter_task_labels.py  0004_alter_task_labels.py  0005_action_historylog.py  0006_auto_20240522_0745.py  0007_alter_action_type.py  0008_auto_20240613_1227.py  0009_alter_task_status.py
company/serializers/: __init__.py  read.py  write.py
company/tests/commands/: test_update_statuses.py
company/tests/filtersets/: test_label.py  test_projectcategory.py  test_worker.py
company/tests/mocks/: mock_request.py
company/tests/models/: test_task.py
company/tests/permissions/: test_task.py
company/tests/serializers/: test_task.py  (+4 more)
company_app/: apps.py  asgi.py  auth.py  celery.py  exception_handler.py  settings.py  spectacular_schema.py  urls.py  views.py  wsgi.py
core/: admin.py  forms.py  middlewares.py  models.py  serializers.py  urls.py  validators.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20240506_1129.py  0003_auto_20240506_1430.py  0004_user_worker.py
tests/migration/: test_0003_0004.py
tests/system/: test_authentication.py
(+15 files in other folders)
